--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
 }
 #rslider .ui-slider-range { background: red; }
 #rslider .ui-slider-handle { border-color: red; }
-#gslider .ui-slider-range { background: rgb(0,255,0); }
-#gslider .ui-slider-handle { border-color: rgb(0,255,0); }
+#gslider .ui-slider-range { background: green; }
+#gslider .ui-slider-handle { border-color: green; }
 #bslider .ui-slider-range { background: blue; }
 #bslider.ui-slider-handle { border-color: blue; }
